name:                ln-ui-reactflux
version:             0.1.0.0
synopsis:            LN UI using React Flux
description:         Please see README.md
homepage:            https://github.com/adarqui/ln-ui-reactflux#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.UI
                     , LN.UI.Main
                     , LN.UI.Access
                     , LN.UI.Sort
                     , LN.UI.App.About
                     , LN.UI.App.Boards
                     , LN.UI.App.Breadcrumbs
                     , LN.UI.App.Core
                     , LN.UI.App.Core.Shared
                     , LN.UI.App.Delete
                     , LN.UI.App.Forums
                     , LN.UI.App.Gravatar
                     , LN.UI.App.Home
                     , LN.UI.App.Loading
                     , LN.UI.App.NotFound
                     , LN.UI.App.Oops
                     , LN.UI.App.Organizations
                     , LN.UI.App.PageNumbers
                     , LN.UI.App.Portal
                     , LN.UI.App.Route
                     , LN.UI.App.Users
                     , LN.UI.App.Types
                     , LN.UI.Helpers.ReactFluxDOM
                     , LN.UI.View
                     , LN.UI.View.Button
                     , LN.UI.View.Internal
                     , LN.UI.View.Field
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , data-default
                     , deepseq
                     , either
                     , ghcjs-router
                     , parsec
                     , react-flux == 1.1.1
                     , react-flux-router
                     , text
                     , time
                     , transformers
                     , tuple
                     , web-routes == 99.99
                     , ln-sanitize
                     , ln-validate
                     , ln-ui-core
                     , haskell-ln-types
                     , haskell-api-helpers-shared
                     , haskell-either-helpers
                     , haskell-web-bootstrap
                     , haskell-ebyam
                     , haskell-rehtie
  if impl(ghcjs)
     build-depends:    ghcjs-base, haskell-api-helpers-ghcjs, ln-api-ghcjs
  else
    build-depends:     haskell-api-helpers, ln-api
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite ln-ui-reactflux-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LN.UI.ReactFluxSpec
  build-depends:       base
                     , hspec
                     , text
                     , web-routes
                     , haskell-ln-types
                     , ln-ui-reactflux
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/ln-ui-reactflux
