name:                ln-ui-reactflux
version:             0.1.0.0
synopsis:            LN.UI.ReactFlux using React Flux
description:         Please see README.md
homepage:            https://github.com/adarqui/ln-ui-reactflux#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.UI.ReactFlux
                     , LN.UI.ReactFlux.Access
                     , LN.UI.ReactFlux.Dispatcher
                     , LN.UI.ReactFlux.Main
                     , LN.UI.ReactFlux.Types
                     , LN.UI.ReactFlux.App.About
                     , LN.UI.ReactFlux.App.Boards
                     , LN.UI.ReactFlux.App.Breadcrumbs
                     , LN.UI.ReactFlux.App.Core
                     , LN.UI.ReactFlux.App.Core.Shared
                     , LN.UI.ReactFlux.App.Delete
                     , LN.UI.ReactFlux.App.Experiments
                     , LN.UI.ReactFlux.App.Forums
                     , LN.UI.ReactFlux.App.Gravatar
                     , LN.UI.ReactFlux.App.Layout
                     , LN.UI.ReactFlux.App.Like
                     , LN.UI.ReactFlux.App.Home
                     , LN.UI.ReactFlux.App.Loader
                     , LN.UI.ReactFlux.App.NavBar
                     , LN.UI.ReactFlux.App.NotFound
                     , LN.UI.ReactFlux.App.Oops
                     , LN.UI.ReactFlux.App.Organizations
                     , LN.UI.ReactFlux.App.PageNumbers
                     , LN.UI.ReactFlux.App.Portal
                     , LN.UI.ReactFlux.App.Profile
                     , LN.UI.ReactFlux.App.Star
                     , LN.UI.ReactFlux.App.Users
                     , LN.UI.ReactFlux.App.Threads
                     , LN.UI.ReactFlux.App.ThreadPosts
                     , LN.UI.ReactFlux.App.Types
                     , LN.UI.ReactFlux.Helpers.ReactFluxDOM
                     , LN.UI.ReactFlux.Helpers.ReactFluxView
                     , LN.UI.ReactFlux.View
                     , LN.UI.ReactFlux.View.Button
                     , LN.UI.ReactFlux.View.Internal
                     , LN.UI.ReactFlux.View.Field
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , clay
                     , containers
                     , data-default
                     , deepseq
                     , either
                     , ghcjs-router
                     , parsec
                     , react-flux == 1.1.1
                     , react-flux-router
                     , text
                     , time
                     , transformers
                     , tuple
                     , web-routes == 99.99
                     , ln-sanitize
                     , ln-validate
                     , ln-ui-core
                     , haskell-ln-types
                     , haskell-api-helpers-shared
                     , haskell-bbcode-parser
                     , haskell-bbcode-parser-reactflux
                     , haskell-either-helpers
                     , haskell-web-bootstrap
                     , haskell-ebyam
                     , haskell-rehtie
  if impl(ghcjs)
     build-depends:    ghcjs-base, haskell-api-helpers-ghcjs, ln-api-ghcjs
  else
    build-depends:     haskell-api-helpers, ln-api
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite ln-ui-reactflux-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LN.UI.ReactFluxSpec
  build-depends:       base
                     , hspec
                     , text
                     , web-routes
                     , haskell-ln-types
                     , ln-ui-reactflux
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/ln-ui-reactflux
