name:                ln-ui
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adarqui/ln-ui#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.UI
                     , LN.UI.Main
                     , LN.UI.Types
                     , LN.UI.App.About
                     , LN.UI.App.Breadcrumbs
                     , LN.UI.App.Core
                     , LN.UI.App.Core.Shared
                     , LN.UI.App.Delete
                     , LN.UI.App.Home
                     , LN.UI.App.Organizations
                     , LN.UI.App.Organization
                     , LN.UI.App.PageNumbers
                     , LN.UI.App.Portal
                     , LN.UI.Helpers.DataText
                     , LN.UI.Helpers.HaskellApiHelpers
                     , LN.UI.Helpers.Map
                     , LN.UI.Helpers.ReactFluxDOM
                     , LN.UI.Router.Types
                     , LN.UI.Router.Util
                     , LN.UI.Router.Class.App
                     , LN.UI.Router.Class.CRUD
                     , LN.UI.Router.Class.Crumb
                     , LN.UI.Router.Class.Link
                     , LN.UI.Router.Class.OrderBy
                     , LN.UI.Router.Class.Param
                     , LN.UI.Router.Class.Route
                     , LN.UI.State.Internal.Types
                     , LN.UI.State.Loading
                     , LN.UI.State.PageInfo
                     , LN.UI.State.Organization
                     , LN.UI.State.TeamMember
                     , LN.UI.State.Team
                     , LN.UI.State.Forum
                     , LN.UI.State.Board
                     , LN.UI.State.Thread
                     , LN.UI.State.ThreadPost
                     , LN.UI.State.Resource
                     , LN.UI.State.Leuron
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , data-default
                     , deepseq
                     , either
                     , ghcjs-router
                     , parsec
                     , react-flux == 1.1.1
                     , react-flux-router
                     , text
                     , transformers
                     , web-routes
                     , ln-sanitize
                     , ln-validate
                     , ln-api-ghcjs
                     , haskell-ln-types
                     , haskell-api-helpers-shared
                     , haskell-api-helpers-ghcjs
                     , haskell-either-helpers
                     , haskell-rehtie
  if impl(ghcjs)
     build-depends:    ghcjs-base
  default-language:    Haskell2010

test-suite ln-ui-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LN.UI.App.PageNumbersSpec
                     , LN.UI.Router.Class.RouteSpec
                     , LN.UI.Router.Class.CRUDSpec
  build-depends:       base
                     , hspec
                     , text
                     , web-routes
                     , haskell-ln-types
                     , ln-ui
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/ln-ui
